--- a/java4qa/github-sample/build.gradle
+++ b/java4qa/github-sample/build.gradle
@@ -12,3 +12,7 @@ dependencies {
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'com.jcabi:jcabi-github:0.33.1'
 }
+
+test {
+    useTestNG()
+}
