Update fgradle config

--- a/java4qa/sandbox/build.gradle
+++ b/java4qa/sandbox/build.gradle
@@ -14,3 +14,11 @@ dependencies {
 test  {
     useTestNG()
 }
+
+sourceSets {
+    test {
+        java {
+            srcDirs = ["src"]
+        }
+    }
+}
