Update module for Jenkins setup

--- a/java4qa/addressbook/build.gradle
+++ b/java4qa/addressbook/build.gradle
@@ -34,29 +34,29 @@ task testGroups(type: Test) {
     }
 }
 
-task testContacts(type: Test) {
-    useTestNG() {
-        suites "src/test/resources/testng-contacts.xml"
-    }
-    if (project.hasProperty('browser')){
-        systemProperty 'browser',  "${browser}"
-    }
-    if (project.hasProperty('target')){
-        systemProperty 'target',  "${target}"
-    }
-    if (project.hasProperty('verifyUI')){
-        systemProperty 'verifyUI',  "${verifyUI}"
-    }
-}
-
-task testContactsCompare(type: Test) {
-    useTestNG() {
-        suites "src/test/resources/testng-contacts-compare.xml"
-    }
-    if (project.hasProperty('browser')){
-        systemProperty 'browser',  "${browser}"
-    }
-    if (project.hasProperty('target')){
-        systemProperty 'target',  "${target}"
-    }
-}
+//task testContacts(type: Test) {
+//    useTestNG() {
+//        suites "src/test/resources/testng-contacts.xml"
+//    }
+//    if (project.hasProperty('browser')){
+//        systemProperty 'browser',  "${browser}"
+//    }
+//    if (project.hasProperty('target')){
+//        systemProperty 'target',  "${target}"
+//    }
+//    if (project.hasProperty('verifyUI')){
+//        systemProperty 'verifyUI',  "${verifyUI}"
+//    }
+//}
+//
+//task testContactsCompare(type: Test) {
+//    useTestNG() {
+//        suites "src/test/resources/testng-contacts-compare.xml"
+//    }
+//    if (project.hasProperty('browser')){
+//        systemProperty 'browser',  "${browser}"
+//    }
+//    if (project.hasProperty('target')){
+//        systemProperty 'target',  "${target}"
+//    }
+//}
