Ipdate file for remote browser runing.

--- a/java4qa/addressbook/src/test/resources/local.properties
+++ b/java4qa/addressbook/src/test/resources/local.properties
@@ -1,4 +1,4 @@
 addressbook.url = http://localhost/addressbook/
 addressbook.admin = admin
 addressbook.password = secret
-selenuim.server.url =
+selenuim.server =
