--- a/java4qa/addressbook/build.gradle
+++ b/java4qa/addressbook/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 
 task testGroups(type: Test) {
     useTestNG() {
-        suites "src/test/resources/testng-groups.xml"
+        suites 'src/test/resources/testng-groups.xml'
     }
     if (project.hasProperty('browser')){
         systemProperty 'browser',  "${browser}"
@@ -36,7 +36,7 @@ task testGroups(type: Test) {
 
 //task testContacts(type: Test) {
 //    useTestNG() {
-//        suites "src/test/resources/testng-contacts.xml"
+//        suites 'src/test/resources/testng-contacts.xml'
 //    }
 //    if (project.hasProperty('browser')){
 //        systemProperty 'browser',  "${browser}"
@@ -51,7 +51,7 @@ task testGroups(type: Test) {
 //
 //task testContactsCompare(type: Test) {
 //    useTestNG() {
-//        suites "src/test/resources/testng-contacts-compare.xml"
+//        suites 'src/test/resources/testng-contacts-compare.xml'
 //    }
 //    if (project.hasProperty('browser')){
 //        systemProperty 'browser',  "${browser}"
