--- a/java4qa/addressbook/src/test/resources/remote.properties
+++ b/java4qa/addressbook/src/test/resources/remote.properties
@@ -1,4 +1,4 @@
-addressbook.url=http://10.121.20.27/addressbook/
+addressbook.url=http://10.121.20.27/addressbook
 addressbook.admin=admin
 addressbook.password=secret
 selenium.server=http://10.121.20.27:4444/wd/hub
