--- a/java4qa/addressbook/build.gradle
+++ b/java4qa/addressbook/build.gradle
@@ -7,6 +7,10 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    agent
+}
+
 dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.8.1'
     compile 'org.testng:testng:6.13.1'
@@ -17,6 +21,9 @@ dependencies {
     compile 'ch.qos.logback:logback-classic:1.2.3'
     compile 'mysql:mysql-connector-java:5.1.45'
     compile 'org.hibernate:hibernate-core:5.2.12.Final'
+    agent 'org.aspectj:aspectjweaver:1.8.0'
+    compile 'ru.yandex.qatools.allure:allure-testng-adaptor:1.4.0.RC4'
+    compile group: 'ru.yandex.qatools.allure', name: 'allure-commandline', version: '1.5.4'
 }
 
 task testGroups(type: Test) {
@@ -72,3 +79,7 @@ task testGroups(type: Test) {
 //        systemProperty 'verifyUI', "${verifyUI}"
 //    }
 //}
+
+test.doFirst {
+    jvmArgs "-javaagent:${configurations.agent.singleFile}"
+}
