--- a/java4qa/addressbook/src/test/resources/prs_remote.properties
+++ b/java4qa/addressbook/src/test/resources/prs_remote.properties
@@ -1,6 +1,6 @@
-addressbook.url=http://10.121.20.27/addressbook
+addressbook.url=http://localhost/addressbook
 addressbook.admin=admin
 addressbook.password=secret
-selenium.server=http://10.121.20.27:4444/wd/hub
+selenium.server=http://localhost:4444/wd/hub
 webdriver.chrome.driver=
 webdriver.gecko.driver=
